--- a/src/pages/protected.astro
+++ b/src/pages/protected.astro
@@ -2,16 +2,28 @@
 import { firebase } from "@/firebase/config";
 import MainLayout from "@/layout/MainLayout.astro";
 
-const firebaseUser = firebase.auth.currentUser;
-console.log("🚀 ~ firebaseUser:", firebaseUser);
+//----- Check if user is logged in by locals Best Practices -----
 
-if (firebaseUser === null) {
+const { user, isLoggedIn } = Astro.locals;
+
+if (!isLoggedIn || !user) {
   return Astro.redirect("/login");
 }
 
-const { displayName, email, photoURL, emailVerified } = firebaseUser;
+const { name, email, avatar, emailVerified } = user!;
+//----- Check if user is logged in by firebase -----
 
-const name = displayName ?? "No name";
+const firebaseUser = firebase.auth.currentUser!;
+
+// if (firebaseUser === null) {
+//   return Astro.redirect("/login");
+// }
+
+await firebaseUser.reload();
+
+// const { displayName, email, photoURL, emailVerified } = firebaseUser;
+
+// const name = displayName ?? "No name";
 
 export const prerender = false;
 ---
@@ -22,10 +34,10 @@ export const prerender = false;
       class="md:flex bg-slate-100 rounded-xl p-8 md:p-0 dark:bg-slate-800"
     >
       {
-        photoURL ? (
+        avatar ? (
           <img
             class="w-24 h-24 md:w-48 md:h-auto md:rounded-none rounded-full mx-auto"
-            src="https://avatars.githubusercontent.com/u/67946056?v=4"
+            src={avatar}
             alt={`Image of ${name}`}
             width="384"
             height="512"
