--- a/src/pages/protected.astro
+++ b/src/pages/protected.astro
@@ -10,16 +10,17 @@ if (!isLoggedIn || !user) {
   return Astro.redirect("/login");
 }
 
-const { name, email, avatar, emailVerified } = user!;
+const { name, email, avatar } = user!;
 //----- Check if user is logged in by firebase -----
 
-const firebaseUser = firebase.auth.currentUser!;
+const firebaseUser = firebase.auth.currentUser;
 
 // if (firebaseUser === null) {
 //   return Astro.redirect("/login");
 // }
 
-await firebaseUser.reload();
+await firebaseUser?.reload();
+const { emailVerified } = firebaseUser!;
 
 // const { displayName, email, photoURL, emailVerified } = firebaseUser;
 
